--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
   <title>Tatbela - تتبيلة</title>
   <link rel="shortcut icon" href="assets/imgs/tatbelalogo.svg" type="image/x-icon">
 
-  <meta name="description"
-    content="محمد سيد - مطور مواقع وتطبيقات محترف يقدم خدمات تطوير المواقع وتطبيقات الهواتف باستخدام فلاتر.">
+  <meta name="description" content="مطعم تتبيلة ,ملوك الكريب في مصر👑🔥">
 
   <meta name="keywords"
-    content="محمد سيد , محمد سيد عبدالعليم , محمد سيد عبدالعليم محمود , سكيبر , محمد سكيبر , محمد سيد سكيبر , مصر , الزاوية الحمرء , محد سيد ازاوية الحمراء , Mohamed , Mohamed Sayed , Mohamed Skepr , Mohamed Sayed Skepr , Mohamed Sayed AbdElalem ,iskrpr , itskepr, qwsdxccc">
+    content="كريب سيد , مطعم تتبيلة , تتبيلة , سكيبر , محمد سكيبر , محمد سيد سكيبر , مصر , الزاوية الحمرء , تتبيلة الزاوية الحمراء , Tatbela , Mohamed Sayed , Mohamed Skepr , Mohamed Sayed Skepr , Mohamed Sayed AbdElalem ,iskrpr , itskepr, qwsdxccc">
   <meta name="author" content="Mohamed Sayed , mohamed sayed skepr, skepr , محمد سيد , سكيبر ,محمد سيد عبدالعليم">
 
   <meta property="og:image" content="assets/imgs/Screenshot.png">
@@ -24,16 +23,27 @@
 <body>
   <div id="preloader">
     <img src="assets/imgs/tatbelalogo.svg" alt="tatbela logo skepr"><br>
-    <a class="power" href="iskepr.web.app">تم برمجة الموقع بواسطة <span>@سكيبر</span></a>
+    <a class="power" href="https://iskepr.web.app">تم برمجة الموقع بواسطة <span>@سكيبر</span></a>
   </div>
   <header>
     <div class="logo">
       <a href="index.html"><img src="assets/imgs/tatbelalogo.svg" alt="Tatbela logo"></a>
     </div>
     <div class="links">
-      <a href="about.html">عنا</a>
-      <a href="menu.html">المينيو</a>
       <a href="index.html" class="active">الرئيسية</a>
+      <a href="المينيو.html">المينيو</a>
+      <a href="عنا.html">عنا</a>
+    </div>
+    <div class="menu">
+      <label class="lines" onclick="toggleMenu()">
+        <input type="checkbox" id="lines">
+        <svg class="svg" viewBox="0 0 32 32">
+          <path class="line top-bottom"
+            d="M27 10 13 10C10.8 10 9 8.2 9 6 9 3.5 10.8 2 13 2 15.2 2 17 3.8 17 6L17 26C17 28.2 18.8 30 21 30 23.2 30 25 28.2 25 26 25 23.8 23.2 22 21 22L7 22">
+          </path>
+          <path class="line middle" d="M7 16 27 16"></path>
+        </svg>
+      </label>
     </div>
   </header>
   <!-- first -->
@@ -67,7 +77,7 @@
       </div>
     </div>
     <div class="buttom">
-      <a href="#" class="mainbut">اطلب الان</a>
+      <a href="المينيو.html" class="mainbut">اطلب الان</a>
     </div>
   </section>
   <!-- most seel -->
@@ -78,7 +88,7 @@
         <h2>أشهر الوجبات</h2>
         <h3>الاكثر مبيعاً</h3>
       </div>
-      <a href="mainbut" class="mainbut">المزيد</a>
+      <a href="المينيو.html" class="mainbut">المزيد</a>
     </div>
     <div class="products"></div>
   </section>
@@ -91,7 +101,7 @@
         <h2>احدث الوجبات</h2>
         <h3>حصرياً</h3>
       </div>
-      <a href="mainbut" class="mainbut">المزيد</a>
+      <a href="المينيو.html" class="mainbut">المزيد</a>
     </div>
     <div class="products"></div>
   </section>
@@ -126,7 +136,7 @@
       <a href="https://www.instagram.com/tatbela_restaurant"><img src="assets/imgs/instagram.png"
           alt="instagram tatbela"></a>
     </div>
-    <a class="power" href="iskepr.web.app">تم برمجة الموقع بواسطة <span>@سكيبر</span>
+    <a class="power" href="https://iskepr.web.app">تم برمجة الموقع بواسطة <span>@سكيبر</span>
   </footer>
 
   <script src="main.js"></script>
@@ -143,7 +153,7 @@
         $.each(data, function (index) {
           $(".products")
             .append(
-              `<div class="product" id="product-` + index  + `">
+              `<div class="product" id="product-` + index + `">
                 <img src="`+ data[index].الصورة + `" alt="` + data[index].الاسم + ` tatbela">
                 <div class="detals">
                   <h2><span>` + data[index].الاسم + `</span></h2>
