--- a/المنتج.html
+++ b/المنتج.html
@@ -36,13 +36,25 @@
             <a href="index.html">الرئيسية</a>
         </div>
     </header>
-    
+
     <div class="product">
         <img id="product-image" src="" alt="صورة المنتج">
         <h2 id="product-name"></h2>
         <h4 id="product-description"></h4>
         <h2><span id="product-price"></span> جنيه</h2>
     </div>
+    <!-- most seel -->
+    <section class="scrollprod" data-aos="fade-up">
+        <img class="logoframe" src="assets/imgs/logoframe.svg" alt="">
+        <div class="top">
+            <div class="text">
+                <h2>أشهر الوجبات</h2>
+                <h3>الاكثر مبيعاً</h3>
+            </div>
+            <a href="المينيو.html" class="mainbut">المزيد</a>
+        </div>
+        <div class="products"></div>
+    </section>
 
     <script src="main.js"></script>
     <script src="js/aos.js"></script>
