--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="assets/imgs/tatbelalogo.svg" type="image/x-icon">
 
   <meta name="description" content="مطعم تتبيلة ,ملوك الكريب في مصر👑🔥">
+  <meta name="google-site-verification" content="2GOHGN8OibdcrOzxm623zqvHhH4RQ3907cSktTndfec" />
 
   <meta name="keywords"
     content="كريب سيد , مطعم تتبيلة , تتبيلة , سكيبر , محمد سكيبر , محمد سيد سكيبر , مصر , الزاوية الحمرء , تتبيلة الزاوية الحمراء , Tatbela , Mohamed Sayed , Mohamed Skepr , Mohamed Sayed Skepr , Mohamed Sayed AbdElalem ,iskrpr , itskepr, qwsdxccc">
@@ -22,25 +23,25 @@
 
 <body>
   <div id="preloader">
-    <img src="assets/imgs/tatbelalogo.svg" alt="tatbela logo skepr"><br>
+    <img src="assets/imgs/tatbelalogo.svg" alt="tatbela logo skepr مطعم تتبيلة ,ملوك الكريب في مصر"><br>
     <a class="power" href="https://iskepr.web.app">تم برمجة الموقع بواسطة <span>@سكيبر</span></a>
   </div>
   <header>
     <a href="المينيو.html">
       <div class="but">
         <div class="icon">
-          <img src="assets/imgs/menuicon.svg" alt="">
+          <img src="assets/imgs/menuicon.svg" alt="مطعم تتبيلة ,ملوك الكريب في مصر">
         </div>
         <h3>المينيو</h3>
       </div>
     </a>
     <div class="logo">
-      <a href="index.html"><img src="assets/imgs/tatbelalogo.svg" alt="Tatbela logo"></a>
+      <a href="index.html"><img src="assets/imgs/tatbelalogo.svg" alt="Tatbela logo مطعم تتبيلة ,ملوك الكريب في مصر"></a>
     </div>
     <a href="السلة.html">
       <div class="but">
         <div class="icon">
-          <img src="assets/imgs/carticon.svg" alt="">
+          <img src="assets/imgs/carticon.svg" alt="مطعم تتبيلة ,ملوك الكريب في مصر">
         </div>
         <h3>السلة</h3>
       </div>
@@ -49,20 +50,20 @@
   <!-- first -->
   <section class="secone" data-aos="fade-up" data-aos-delay="100">
     <div class="back">
-      <img src="assets/imgs/cut1.svg" alt="">
-      <img src="assets/imgs/cut2.svg" alt="">
-      <img src="assets/imgs/cut3.svg" alt="">
-      <img src="assets/imgs/cut4.svg" alt="">
+      <img src="assets/imgs/cut1.svg" alt="مطعم تتبيلة ,ملوك الكريب في مصر">
+      <img src="assets/imgs/cut2.svg" alt="مطعم تتبيلة ,ملوك الكريب في مصر">
+      <img src="assets/imgs/cut3.svg" alt="مطعم تتبيلة ,ملوك الكريب في مصر">
+      <img src="assets/imgs/cut4.svg" alt="مطعم تتبيلة ,ملوك الكريب في مصر">
     </div>
     <div class="top">
-      <img class="prandname" src="assets/imgs/name.svg" alt="">
+      <img class="prandname" src="assets/imgs/name.svg" alt="مطعم تتبيلة ,ملوك الكريب في مصر">
       <div class="kings">
-        <img class="s" src="assets/imgs/kings.png" alt="">
-        <img class="b" src="assets/imgs/kingsborder.svg" alt="">
+        <img class="s" src="assets/imgs/kings.png" alt="مطعم تتبيلة ,ملوك الكريب في مصر">
+        <img class="b" src="assets/imgs/kingsborder.svg" alt="مطعم تتبيلة ,ملوك الكريب في مصر">
       </div>
       <a href="المينيو.html" class="mainbut">اطلب الان</a>
 
-      <img class="kerep" src="assets/imgs/kereb.png" alt="">
+      <img class="kerep" src="assets/imgs/kereb.png" alt="مطعم تتبيلة ,ملوك الكريب في مصر">
 
       <div class="gradian"></div>
     </div>
@@ -70,7 +71,7 @@
   <!-- most seel -->
   <section class="scrollprod" data-aos="fade-up">
     <div class="bar">
-      <img class="logoframe" src="assets/imgs/logoframe.svg" alt="">
+      <img class="logoframe" src="assets/imgs/logoframe.svg" alt="مطعم تتبيلة ,ملوك الكريب في مصر">
       <div class="top">
         <div class="text">
           <h2>أشهر الوجبات</h2>
@@ -117,9 +118,9 @@
     <br>
     <div class="links">
       <a href="https://www.facebook.com/tatbelarestaurant"><img src="assets/imgs/facebook.png"
-          alt="facebook tatbela"></a>
+          alt="facebook tatbela مطعم تتبيلة ,ملوك الكريب في مصر"></a>
       <a href="https://www.instagram.com/tatbela_restaurant"><img src="assets/imgs/instagram.png"
-          alt="instagram tatbela"></a>
+          alt="instagram tatbela مطعم تتبيلة ,ملوك الكريب في مصر"></a>
     </div>
     <a class="power" href="https://iskepr.web.app">تم برمجة الموقع بواسطة <span>@سكيبر</span>
   </footer>
@@ -183,7 +184,7 @@
           $("#lasts")
             .append(
               `<a href="` + "المنتج.html?المعرف=" + data[index].المعرف + `"><div class="product" id="product-` + index + `">
-            <img src="` + data[index].الصورة + `" alt="` + data[index].الاسم + `">
+            <img src="` + data[index].الصورة + `" alt="` + data[index].الاسم + `مطعم تتبيلة ,ملوك الكريب في مصر">
             <div class="detals">
               <h2><span>` + data[index].الاسم + `</span></h2>
               <h4>` + data[index].وصف + `</h4>
