--- a/menu.html
+++ b/menu.html
@@ -20,7 +20,7 @@
 
 <body>
   <header>
-    <a href="المينيو.html">
+    <a href="menu.html">
       <div class="but">
         <div class="icon">
           <img src="assets/imgs/menuicon.svg" alt="">
@@ -31,7 +31,7 @@
     <div class="logo">
       <a href="index.html"><img src="assets/imgs/tatbelalogo.svg" alt="Tatbela logo"></a>
     </div>
-    <a href="السلة.html">
+    <a href="cart.html">
       <div class="but active">
         <div class="icon">
           <img src="assets/imgs/carticon.svg" alt="">
