--- a/cart.html
+++ b/cart.html
@@ -23,7 +23,7 @@
 
 <body>
   <header>
-    <a href="المينيو.html">
+    <a href="menu.html">
       <div class="but">
         <div class="icon">
           <img src="assets/imgs/menuicon.svg" alt="">
@@ -34,7 +34,7 @@
     <div class="logo">
       <a href="index.html"><img src="assets/imgs/tatbelalogo.svg" alt="Tatbela logo"></a>
     </div>
-    <a href="السلة.html">
+    <a href="cart.html">
       <div class="but active">
         <div class="icon">
           <img src="assets/imgs/carticon.svg" alt="">
@@ -53,17 +53,19 @@
 
   <!-- نموذج إدخال بيانات العميل -->
   <div id="customer-info-form">
-    <h3>أدخل بياناتك:</h3>
-    <label>الاسم:</label>
-    <input type="text" id="customer-name" required>
-    <br>
-    <label>رقم الهاتف:</label>
-    <input type="tel" id="customer-phone" required>
-    <br>
-    <label>العنوان:</label>
-    <input type="text" id="customer-address" required>
-    <br>
-    <button id="submit-customer-info">إرسال</button>
+  <div class="model">
+      <h3>أدخل بياناتك:</h3>
+      <label>الاسم:</label>
+      <input type="text" id="customer-name" required>
+      <br>
+      <label>رقم الهاتف:</label>
+      <input type="tel" id="customer-phone" required>
+      <br>
+      <label>العنوان:</label>
+      <input type="text" id="customer-address" required>
+      <br>
+      <button id="submit-customer-info" class="mainbut">إرسال</button>
+    </div>
   </div>
 
 
@@ -71,7 +73,7 @@
   <script src="js/smtp.js"></script>
   <script src="main.js"></script>
   <script>
-    
+
   </script>
 
 </body>
