--- a/index.html
+++ b/index.html
@@ -19,6 +19,54 @@
   <!-- style -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="css/aos.css" />
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Restaurant",
+      "name": "Tatbela - تتبيلة",
+      "menu": [
+        {
+          "@type": "MenuItem",
+          "name": "صحن دجاج مشوي",
+          "description": "دجاج مشوي يقدم مع الأرز والخضار.",
+          "offers": {
+            "@type": "Offer",
+            "price": "50.00",
+            "priceCurrency": "جنية"
+          }
+        },
+        {
+          "@type": "MenuItem",
+          "name": "بيتزا",
+          "description": "بيتزا مغطاة بالجبن والخضار.",
+          "offers": {
+            "@type": "Offer",
+            "price": "30.00",
+            "priceCurrency": "جنية"
+          }
+        }
+      ],
+      "address": {
+        "@type": "Address",
+        "streetAddress": "
+        شارع السوق التجاري امام مسجد الشيخ عبيد, أول الزاوية
+        ",
+        "addressLocality": "القاهرة",
+        "addressRegion": "الزاوية الحمراء",
+        "addressCountry": "مصر"
+      },
+      "address": {
+        "@type": "Address",
+        "streetAddress": "
+        123 شارع مصر والسودان بجوار البنك الأهلي
+        ",
+        "addressLocality": "القاهرة",
+        "addressRegion": "حدايق القبة",
+        "addressCountry": "مصر"
+      }
+    }
+    </script>
+
 </head>
 
 <body>
@@ -27,7 +75,7 @@
     <a class="power" href="https://iskepr.web.app">تم برمجة الموقع بواسطة <span>@سكيبر</span></a>
   </div>
   <header>
-    <a href="المينيو.html">
+    <a href="menu.html">
       <div class="but">
         <div class="icon">
           <img src="assets/imgs/menuicon.svg" alt="مطعم تتبيلة ,ملوك الكريب في مصر">
@@ -36,9 +84,10 @@
       </div>
     </a>
     <div class="logo">
-      <a href="index.html"><img src="assets/imgs/tatbelalogo.svg" alt="Tatbela logo مطعم تتبيلة ,ملوك الكريب في مصر"></a>
+      <a href="index.html"><img src="assets/imgs/tatbelalogo.svg"
+          alt="Tatbela logo مطعم تتبيلة ,ملوك الكريب في مصر"></a>
     </div>
-    <a href="السلة.html">
+    <a href="cart.html">
       <div class="but">
         <div class="icon">
           <img src="assets/imgs/carticon.svg" alt="مطعم تتبيلة ,ملوك الكريب في مصر">
@@ -61,7 +110,7 @@
         <img class="s" src="assets/imgs/kings.png" alt="مطعم تتبيلة ,ملوك الكريب في مصر">
         <img class="b" src="assets/imgs/kingsborder.svg" alt="مطعم تتبيلة ,ملوك الكريب في مصر">
       </div>
-      <a href="المينيو.html" class="mainbut">اطلب الان</a>
+      <a href="menu.html" class="mainbut">اطلب الان</a>
 
       <img class="kerep" src="assets/imgs/kereb.png" alt="مطعم تتبيلة ,ملوك الكريب في مصر">
 
@@ -77,7 +126,7 @@
           <h2>أشهر الوجبات</h2>
           <h3>الاكثر مبيعاً</h3>
         </div>
-        <a href="المينيو.html" class="mainbut">المزيد</a>
+        <a href="menu.html" class="mainbut">المزيد</a>
       </div>
       <div class="products" id="topsall"></div>
     </div>
@@ -91,7 +140,7 @@
         <h2>احدث الوجبات</h2>
         <h3>حصرياً</h3>
       </div>
-      <a href="المينيو.html" class="mainbut">المزيد</a>
+      <a href="menu.html" class="mainbut">المزيد</a>
     </div>
     <div class="products" id="lasts"></div>
   </section>
@@ -147,7 +196,7 @@
         $.each(data, function (index) {
           $("#topsall")
             .append(
-              `<a href="` + "المنتج.html?المعرف=" + data[index].المعرف + `"><div class="product" id="product-` + index + `">
+              `<a href="` + "product.html?id=" + data[index].المعرف + `"><div class="product" id="product-` + index + `">
             <img src="` + data[index].الصورة + `" alt="` + data[index].الاسم + `">
             <div class="detals">
               <h2><span>` + data[index].الاسم + `</span></h2>
@@ -183,7 +232,7 @@
         $.each(data, function (index) {
           $("#lasts")
             .append(
-              `<a href="` + "المنتج.html?المعرف=" + data[index].المعرف + `"><div class="product" id="product-` + index + `">
+              `<a href="` + "product.html?id=" + data[index].المعرف + `"><div class="product" id="product-` + index + `">
             <img src="` + data[index].الصورة + `" alt="` + data[index].الاسم + `مطعم تتبيلة ,ملوك الكريب في مصر">
             <div class="detals">
               <h2><span>` + data[index].الاسم + `</span></h2>
