--- a/index.html
+++ b/index.html
@@ -112,14 +112,13 @@
       </div>
       <a href="menu.html" class="mainbut">اطلب الان</a>
 
-      <img class="kerep" src="assets/imgs/kereb.png" alt="مطعم تتبيلة ,ملوك الكريب في مصر">
+      <img class="kerep" src="assets/imgs/kereb.webp" alt="مطعم تتبيلة ,ملوك الكريب في مصر">
 
       <div class="gradian"></div>
     </div>
   </section>
   <!-- most seel -->
   <section class="scrollprod" data-aos="fade-up">
-    <div class="bar">
       <img class="logoframe" src="assets/imgs/logoframe.svg" alt="مطعم تتبيلة ,ملوك الكريب في مصر">
       <div class="top">
         <div class="text">
@@ -129,7 +128,6 @@
         <a href="menu.html" class="mainbut">المزيد</a>
       </div>
       <div class="products" id="topsall"></div>
-    </div>
   </section>
   <br><br><br><br>
   <!-- new products -->
