--- a/menu.html
+++ b/menu.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tatbela - تتبيلة</title>
+  <title>المينيو - تتبيلة</title>
   <link rel="shortcut icon" href="assets/imgs/tatbelalogo.svg" type="image/x-icon">
 
   <meta name="description" content="مطعم تتبيلة ,ملوك الكريب في مصر👑🔥">
