--- a/product.html
+++ b/product.html
@@ -170,7 +170,7 @@
         function addtocart() {
 
             // استرجاع بيانات المنتج من الصفحة
-            const productId = urlParams.get('المعرف');
+            const productId = urlParams.get('id');
             const productName = document.getElementById('product-name').textContent;
             const productPrice = document.getElementById('product-price').textContent;
             const productImage = document.getElementById('product-image').src;
